--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "3002:3000"
     links:
       - postgres
+      - memcached
     networks:
       - appnet
     volumes:
@@ -29,6 +30,11 @@ services:
       - appnet
     volumes:
       - "./tmp/postgres-data:/var/lib/postgresql/data"
+
+  memcached:
+    image: memcached:1.5.11
+    ports:
+      - "11211:11211"
 
 networks:
   appnet:
