starting to flesh out default source component creation, default group, general compoent and compoent type addition

--- a/contract/v1/api.yml
+++ b/contract/v1/api.yml
@@ -500,6 +500,9 @@ parameters:
       required:
         - params
       properties:
+        component-type-id:
+          type: integer
+          description: The stype of component you want to create
         params:
           type: object
           example:
@@ -510,7 +513,6 @@ parameters:
           description: Param set for app-specific component definition
         environment:
           type: string
-          required: true
           description: Target environment against which the conponent's execution will be defined
         group:
           type: string
